--- a/Blogg/Views/Shared/_Layout.cshtml
+++ b/Blogg/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                         </li>
                         @if(SignInManager.IsSignedIn(User)) {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Blogg" asp-action="Index">Privacy</a>
                             </li>
                         }
                     </ul>
