--- a/Blogg/Views/Shared/_Layout.cshtml
+++ b/Blogg/Views/Shared/_Layout.cshtml
@@ -24,11 +24,14 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Hem</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="BloggList">Bloggar</a>
                         </li>
                         @if(SignInManager.IsSignedIn(User)) {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Blogg" asp-action="Index">Privacy</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Blogg" asp-action="Index">Admin</a>
                             </li>
                         }
                     </ul>
