--- a/Blogg/Views/Blogg/Index.cshtml
+++ b/Blogg/Views/Blogg/Index.cshtml
@@ -12,7 +12,7 @@
 
 <form asp-controller="Blogg" asp-action="Index" method="get">
     <p>
-        Search: 
+        Search:
         <input type="text" name="searchString" value="@ViewData["CurrentFilter"]" />
         <input type="submit" value="Search" />
     </p>
@@ -40,29 +40,42 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Content)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreateBy)
-            </td>
-            <td>
-                <a href="images/@Html.DisplayFor(modelItem => item.ImageName)">@Html.DisplayFor(modelItem => item.ImageName)</a>
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PublishDate)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Content)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CreateBy)
+                </td>
+                <td>
+                    <a href="images/@Html.DisplayFor(modelItem => item.ImageName)">@Html.DisplayFor(modelItem =>
+                    item.ImageName)</a>
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PublishDate)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+
+@section styles {
+    <style>
+        .table {
+            background-color: rgb(231, 231, 231);
+            padding: 2rem 1.5rem;
+            margin-bottom: 0;
+        }
+
+    </style>
+}
