--- a/Blogg/Views/Shared/_Layout.cshtml
+++ b/Blogg/Views/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - Blogg - <a asp-area="" asp-controller="Blogg" asp-action="Index">Privacy</a>
+            &copy; 2024 - Xiehui Mao - Artistry - <a asp-area="" asp-controller="Blogg" asp-action="Index">Admin</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
