--- a/Blogg/Views/Blogg/Delete.cshtml
+++ b/Blogg/Views/Blogg/Delete.cshtml
@@ -1,14 +1,13 @@
 @model Blogg.Models.BloggModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Radera";
 }
 
-<h1>Delete</h1>
+<h1>@ViewData["Title"]</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>BloggModel</h4>
+<div class="detail">
+    <h4>Är du säker på att du vill ta bort detta?</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -45,7 +44,19 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Radera" class="btn btn-danger" /> |
+        <a asp-action="Index">Tillbaka till lista</a>
     </form>
 </div>
+
+@section styles {
+    <style>
+        .detail {
+            background-color: rgb(231, 231, 231);
+            padding: 2rem 1.5rem;
+            margin-bottom: 0;
+            border-radius: 10px;
+            margin-bottom: 5rem;
+        }
+    </style>
+}
