--- a/Blogg/Views/Blogg/Details.cshtml
+++ b/Blogg/Views/Blogg/Details.cshtml
@@ -6,7 +6,7 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<div>
+<div class="detail">
     <h4>@Html.DisplayFor(model => model.Title)</h4>
     <hr />
     <dl class="row">
@@ -49,8 +49,25 @@
             }
         </dd>
     </dl>
+
+    <div>
+        <a asp-action="Edit" asp-route-id="@Model?.Id">Redigera</a> |
+        <a asp-action="Index">Tillbaka till lista</a>
+    </div>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+
+@section styles {
+    <style>
+        .detail {
+            background-color: rgb(231, 231, 231);
+            padding: 2rem 1.5rem;
+            margin-bottom: 0;
+            border-radius: 10px;
+            margin-bottom: 5rem;
+        }
+
+        .detail img {
+            width: 100%;
+        }
+    </style>
+}
