--- a/Blogg/Views/Blogg/Index.cshtml
+++ b/Blogg/Views/Blogg/Index.cshtml
@@ -1,24 +1,24 @@
 @model IEnumerable<Blogg.Models.BloggModel>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Admin";
 }
 
-<h1>Index</h1>
+<h1>@ViewData["Title"]</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Skapa nytt</a>
 </p>
 
-<form asp-controller="Blogg" asp-action="Index" method="get">
+<form asp-controller="Blogg" asp-action="Index" method="get" class="search">
     <p>
-        Search:
+        Söka med föfattare eller blogg:
         <input type="text" name="searchString" value="@ViewData["CurrentFilter"]" />
-        <input type="submit" value="Search" />
+        <input type="submit" value="Söka" />
     </p>
 </form>
-
-<table class="table">
+<div class="table-responsive">
+<table class="table table-striped table-hover blogtable">
     <thead>
         <tr>
             <th>
@@ -43,9 +43,9 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td>
+                <th>
                     @Html.DisplayFor(modelItem => item.Title)
-                </td>
+                </th>
                 @* Visa 7 ord följt av ellips *@
                 <td>
                     @{
@@ -80,21 +80,59 @@
                     @Html.DisplayFor(modelItem => item.PublishDate)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Redigera</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Detaljer</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Radera</a>
                 </td>
             </tr>
         }
     </tbody>
 </table>
+</div>
 
 @section styles {
     <style>
-        .table {
+        .search {
+            font-size: 1.1rem;
+        }
+
+        .search p {
+            color: rgb(231, 231, 231);
+        }
+
+        .blogtable {
             background-color: rgb(231, 231, 231);
-            padding: 2rem 1.5rem;
-            margin-bottom: 0;
+            width: 100%;
+            height: 100%;
+            margin: 0;
+        }
+
+        .blogtable th {
+            padding: 1rem;
+        }
+
+        .blogtable th:first-child,
+        .blogtable td:first-child,
+        .blogtable th:last-child,
+        .blogtable td:last-child {
+            position: sticky;
+            background-color: #fff;
+            z-index: 2;
+        }
+
+        .blogtable th:first-child,
+        .blogtable td:first-child {
+            left: 0;
+        }
+
+        .blogtable th:last-child,
+        .blogtable td:last-child {
+            right: 0;
+        }
+
+        .table-responsive {
+            border-radius: 10px;
+            overflow-x: auto;
         }
     </style>
 }
