--- a/Blogg/Views/Home/Exhibits.cshtml
+++ b/Blogg/Views/Home/Exhibits.cshtml
@@ -19,6 +19,7 @@
             </div>
 
             <div class="textzone">
+                <h4>Målning</h4>
                 <p>Fördjupa dig i målningens färgvärld och upptäck de fantastiska visuella upplevelser som konstnärer
                     skapar med penseldrag och färg. Målningarna visar konstnärernas uttryck för liv, känslor och
                     fantasi. Varje verk är en andlig kommunikation som tar dig genom olika tid, rum och situationer.</p>
@@ -31,6 +32,7 @@
             </div>
 
             <div class="textzone">
+                <h4>Skulptur</h4>
                 <p>Skulptur är kärnan i tredimensionell konst. Genom skulptur förvandlar konstnärer kreativitet till
                     tredimensionella verk. Skulpturerna visar konstnärernas fantasi och skicklighet med deras mångfald
                     av former, material och strukturer. Rör vid skulpturerna, känn texturerna och formerna på
@@ -44,6 +46,7 @@
             </div>
 
             <div class="textzone">
+                <h4>Fotograf</h4>
                 <p>Konsten att fotografera registrerar livets fragment och känslor genom linsen, och visar fotografens
                     unika observation och förståelse av världen. Varje foto är början på en berättelse som tar dig att
                     uppskatta sederna i olika regioner, olika kulturer och olika epoker. Genom fotografering kommer du
