--- a/Blogg/Views/Blogg/Index.cshtml
+++ b/Blogg/Views/Blogg/Index.cshtml
@@ -40,7 +40,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
+        @foreach (var item in Model.OrderBy(item => item.PublishDate).Reverse())
         {
             <tr>
                 <th>
