--- a/Blogg/Views/Home/Details.cshtml
+++ b/Blogg/Views/Home/Details.cshtml
@@ -49,21 +49,8 @@
             }
         </dd>
     </dl>
+
+    <div>
+        <a asp-action="BloggList">Tillbaka till lista</a>
+    </div>
 </div>
-
-@section styles {
-    <style>
-        .detail {
-            background-color: rgb(231, 231, 231);
-            padding: 2rem 1.5rem;
-            margin-bottom: 0;
-            border-radius: 10px;
-            margin-bottom: 5rem;
-        }
-
-        .detail img {
-            border-radius: 10px;
-            width: 100%;
-        }
-    </style>
-}
