--- a/Blogg/wwwroot/css/site.css
+++ b/Blogg/wwwroot/css/site.css
@@ -65,3 +65,16 @@ h2,
 h3 {
   color: rgb(231, 231, 231);
 }
+
+.detail {
+  background-color: rgb(231, 231, 231);
+  padding: 2rem 1.5rem;
+  margin-bottom: 0;
+  border-radius: 10px;
+  margin-bottom: 5rem;
+}
+
+.detail img {
+  border-radius: 10px;
+  width: 100%;
+}
